change 「System.loadLibrary」 to 「System.load」